@@ -1,4 +1,4 @@
-/*	$NetBSD: if_arp.c,v 1.205 2016/04/07 03:22:15 christos Exp $	*/
+/*	$NetBSD: if_arp.c,v 1.206 2016/04/13 00:47:01 ozaki-r Exp $	*/
 
 /*-
  * Copyright (c) 1998, 2000, 2008 The NetBSD Foundation, Inc.
@@ -68,7 +68,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: if_arp.c,v 1.205 2016/04/07 03:22:15 christos Exp $");
+__KERNEL_RCSID(0, "$NetBSD: if_arp.c,v 1.206 2016/04/13 00:47:01 ozaki-r Exp $");
 
 #ifdef _KERNEL_OPT
 #include "opt_ddb.h"
@@ -204,13 +204,6 @@ static struct	in_addr myip, srv_ip;
 static int	myip_initialized = 0;
 static int	revarp_in_progress = 0;
 static struct	ifnet *myip_ifp = NULL;
-
-#ifdef DDB
-static void db_print_sa(const struct sockaddr *);
-static void db_print_ifa(struct ifaddr *);
-static void db_print_llinfo(struct llentry *);
-static int db_show_rtentry(struct rtentry *, void *);
-#endif
 
 static int arp_drainwanted;
 
@@ -1919,107 +1912,6 @@ revarpwhoarewe(struct ifnet *ifp, struct in_addr *serv_in,
 	memcpy(clnt_in, &myip, sizeof(*clnt_in));
 	return 0;
 }
-
-
-
-#ifdef DDB
-
-#include <machine/db_machdep.h>
-#include <ddb/db_interface.h>
-#include <ddb/db_output.h>
-
-static void
-db_print_sa(const struct sockaddr *sa)
-{
-	int len;
-	const u_char *p;
-
-	if (sa == NULL) {
-		db_printf("[NULL]");
-		return;
-	}
-
-	p = (const u_char *)sa;
-	len = sa->sa_len;
-	db_printf("[");
-	while (len > 0) {
-		db_printf("%d", *p);
-		p++; len--;
-		if (len) db_printf(",");
-	}
-	db_printf("]\n");
-}
-
-static void
-db_print_ifa(struct ifaddr *ifa)
-{
-	if (ifa == NULL)
-		return;
-	db_printf("  ifa_addr=");
-	db_print_sa(ifa->ifa_addr);
-	db_printf("  ifa_dsta=");
-	db_print_sa(ifa->ifa_dstaddr);
-	db_printf("  ifa_mask=");
-	db_print_sa(ifa->ifa_netmask);
-	db_printf("  flags=0x%x,refcnt=%d,metric=%d\n",
-			  ifa->ifa_flags,
-			  ifa->ifa_refcnt,
-			  ifa->ifa_metric);
-}
-
-static void
-db_print_llinfo(struct llentry *la)
-{
-	if (la == NULL)
-		return;
-	db_printf("  la_hold=%p, la_asked=%d\n", la->la_hold, la->la_asked);
-	db_printf("  la_flags=0x%x\n", la->la_flags);
-}
-
-/*
- * Function to pass to rt_walktree().
- * Return non-zero error to abort walk.
- */
-static int
-db_show_rtentry(struct rtentry *rt, void *w)
-{
-	db_printf("rtentry=%p", rt);
-
-	db_printf(" flags=0x%x refcnt=%d use=%"PRId64" expire=%"PRId64"\n",
-			  rt->rt_flags, rt->rt_refcnt,
-			  rt->rt_use, (uint64_t)rt->rt_expire);
-
-	db_printf(" key="); db_print_sa(rt_getkey(rt));
-	db_printf(" mask="); db_print_sa(rt_mask(rt));
-	db_printf(" gw="); db_print_sa(rt->rt_gateway);
-
-	db_printf(" ifp=%p ", rt->rt_ifp);
-	if (rt->rt_ifp)
-		db_printf("(%s)", rt->rt_ifp->if_xname);
-	else
-		db_printf("(NULL)");
-
-	db_printf(" ifa=%p\n", rt->rt_ifa);
-	db_print_ifa(rt->rt_ifa);
-
-	db_printf(" gwroute=%p llinfo=%p\n",
-			  rt->rt_gwroute, rt->rt_llinfo);
-	db_print_llinfo(rt->rt_llinfo);
-
-	return 0;
-}
-
-/*
- * Function to print all the route trees.
- * Use this from ddb:  "show arptab"
- */
-void
-db_show_arptab(db_expr_t addr, bool have_addr,
-    db_expr_t count, const char *modif)
-{
-	rt_walktree(AF_INET, db_show_rtentry, NULL);
-}
-#endif
 
 void
 arp_stat_add(int type, uint64_t count)
